<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  ZoumTarot :: android
  
  $Id$
  $HeadURL$
  %%
  Copyright (C) 2011 Zoumbox.org
  %%
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as
  published by the Free Software Foundation, either version 3 of the 
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public 
  License along with this program.  If not, see
  <http://www.gnu.org/licenses/gpl-3.0.html>.
  #L%
  -->

<resources>
    <string name="error">Erreur: %s</string>

    <string name="app_name">ZoumTarot</string>
    <string name="version">1.3</string>
    <string name="version_full">Version 1.3</string>

    <string name="parties_list">ZoumTarot - Liste des parties</string>
    <string name="remove_one">Effacer cette partie</string>
    <string name="remove_all">Effacer tout</string>
    <string name="party_removed">1 partie supprimée</string>
    <string name="parties_removed">%d parties supprimées</string>
    <string name="party_create">ZoumTarot - Création/édition d\'une partie</string>
    <string name="deal_create">ZoumTarot - Création/édition d\'une donne</string>
    <string name="party_board">ZoumTarot - Tableau des scores</string>

    <string name="new_deal">Nouvelle donne</string>
    <string name="new_party">Nouvelle partie</string>
    <string name="qr_code_market">QR code (Market)</string>
    <string name="qr_code_version">QR code</string>
    <string name="credits">Crédits</string>
    <string name="legend">Légende</string>
    <string name="statistics">Statistiques</string>
    <string name="rules">Règles</string>
    <string name="close">Fermer</string>

    <string name="taker">Preneur</string>
    <string name="secondTaker">Avec ?</string>
    <string name="excludedPlayer">Exclus</string>
    <string name="contract">Contrat</string>
    <string name="oudlers">Bouts</string>
    <string name="score">Score</string>
    <string name="handful">Poignée</string>
    <string name="oneIsLast">Petit au bout</string>
    <string name="forDefense">Pour la défense</string>
    <string name="slam">Chelem</string>
    <string name="slam_announced">Annoncé</string>
    <string name="slam_realized">Réalisé</string>

    <string name="J1">Joueur 1</string>
    <string name="J2">Joueur 2</string>
    <string name="J3">Joueur 3</string>
    <string name="J4">Joueur 4</string>
    <string name="J5">Joueur 5</string>
    <string name="J6">Joueur 6</string>

    <string name="handful_none">Non</string>
    <string name="handful_simple">Simple (%d)</string>
    <string name="handful_double">Double (%d)</string>
    <string name="handful_triple">Triple (%d)</string>

    <string name="deal_no_taker">Vous devez indiquer qui a pris</string>
    <string name="deal_no_second_taker">Vous devez indiquer qui était avec le preneur</string>
    <string name="deal_no_excluded_player">Vous devez indiquer quel joueur ne participe pas à la donne</string>
    <string name="deal_wrong_excluded_player">Le joueur exclus ne peut pas avoir pris ou avoir été appelé</string>
    <string name="deal_no_contract">Vous devez indiquer le contrat</string>
    <string name="deal_no_oudlers">Vous devez indiquer combien de bouts a le preneur</string>
    <string name="deal_score_range">Le score doit être compris entre 0 et 91</string>
    <string name="deal_score_3players">À 3 joueurs, le score doit être un multiple de 0.5</string>
    <string name="deal_score_4players">À 4 joueurs, le score est forcément un nombre entier</string>
    <string name="deal_score_5players">À 5 joueurs, le score doit être un multiple de 0.5</string>
    <string name="deal_score_6players">À 6 joueurs, le score doit être un multiple de 0.5</string>
    <string name="deal_score_validity">%1$.1f n\'est pas un score possible à %2$d joueurs</string>
    <string name="deal_score_max_oudlers">Il n\'est pas possible d\'avoir un score de 91 sans avoir les 3 bouts</string>
    <string name="deal_score_min_slam">Il n\'est pas possible de réaliser un Chelem avec si peu de points</string>

    <string name="deal_who">%s totalise</string>
    <string name="deal_who_5players">%1$s et %2$s totalisent</string>
    <string name="deal_won">GAGNÉ</string>
    <string name="deal_lost">PERDU</string>
    <string name="deal_attack">L\'attaque</string>
    <string name="deal_defense">La défense</string>
    <string name="deal_just_done">tour "Juste fait" (de 0 points).</string>
    <string name="deal_conclusion">tour %1$s de %2$s points.</string>
    <string name="deal_end">%1$s %2$s points pour %3$.0f : %4$s</string>
    <string name="deal_slam_announced_and_realized">Chelem anoncé et réalisé</string>
    <string name="deal_slam_announced">Chelem anoncé mais non réalisé</string>
    <string name="deal_slam_realized">Chelem non anoncé mais réalisé</string>
    <string name="deal_handful">%s poignée anoncée.</string>
    <string name="deal_one_is_last">%s enmène le petit au bout.</string>
    <string name="deal_score_one_player_format">%1$s marque %2$d points.</string>
    <string name="deal_score_others_format">Les autres joueurs marquent %d points.</string>

    <string name="party_player_names">Vous ne pouvez indiquer 2 joueurs avec le même nom</string>
    <string name="party_player_count">Seules les parties à 3, 4 et 5 joueurs sont supportées pour le moment</string>
    <string name="party_players_modified">Noms des joueurs modifiés</string>
    <string name="party_created">Partie créée</string>

    <string name="parties_new">Pour créer une partie, appuyez sur \'%s\'</string>

    <string name="credits_leader">Project Leader</string>
    <string name="credits_contributor">Contributeur</string>

</resources>

