<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  ZoumTarot :: android
  
  $Id$
  $HeadURL$
  %%
  Copyright (C) 2011 Zoumbox.org
  %%
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as
  published by the Free Software Foundation, either version 3 of the 
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public 
  License along with this program.  If not, see
  <http://www.gnu.org/licenses/gpl-3.0.html>.
  #L%
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <TableLayout android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
        <TableRow>
            <TextView android:text="@string/taker"/>
            <Spinner android:id="@+id/taker"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/contract"/>
            <Spinner android:id="@+id/contract"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/secondTaker"/>
            <Spinner android:id="@+id/secondTaker"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/oudlers"/>
            <RadioGroup android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/oudlers">
                <RadioButton android:checked="false"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/c_b_0"
                             android:text="0"/>
                <RadioButton android:checked="false"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/c_b_1"
                             android:text="1"/>
                <RadioButton android:checked="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/c_b_2"
                             android:text="2"/>
                <RadioButton android:checked="false"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/c_b_3"
                             android:text="3"/>
            </RadioGroup>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/score"/>
            <LinearLayout android:orientation="vertical"
                          android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:layout_weight="1">
                <EditText android:id="@+id/score"
                          android:layout_height="wrap_content"
                          android:layout_width="fill_parent"/>
                <CheckBox android:id="@+id/isDefenseScore"
                          android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:checked="false"
                          android:text="@string/forDefense"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/handful"/>
            <Spinner android:id="@+id/handful"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <CheckBox android:id="@+id/oneIsLast"
                      android:checked="false"
                      android:layout_weight="1"
                      android:text="@string/oneIsLast"/>
            <CheckBox android:id="@+id/forDefense"
                      android:checked="false"
                      android:layout_weight="1"
                      android:text="@string/forDefense"/>
        </TableRow>
        <TableRow>
            <Button android:layout_height="wrap_content"
                    android:text="Terminé"
                    android:id="@+id/saveButton"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"/>
        </TableRow>

    </TableLayout>
</ScrollView>
